syntax = "proto3";

package app.improving.gateway;

import "app/improving/gateway/domain/gateway_domain.proto";
import "kalix/annotations.proto";
import "google/api/annotations.proto";

service GatewayApiAction {
    option (kalix.codegen) = {
        action: { }
    };

    rpc HandleEstablishTenant(CreateTenants) returns (TenantsCreated) {
        option (google.api.http) = {
            post: "/tenant/establish-tenant"
            body: "tenant_infos"
        };
    }
}